2016-11-17  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (epiphany_user_init): New function.
	(sim_create_inferior): Fix copying of argv. Call epiphany_user_init
	in USER_ENVIRONMENT.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-fp.c (float_as_int): Make static inline.
	(int_as_float): Likewise.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* config.in: Regenerated.
	* configure: Regenerated.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* arch.c: Regenerated.
	* arch.h: Regenerated.
	* cpu.c: Regenerated.
	* cpu.h: Regenerated.
	* cpuall.h: Regenerated.
	* decode.c: Regenerated.
	* decode.h: Regenerated.
	* model.c: Regenerated.
	* sem-switch.c: Regenerated.
	* sem.c: Regenerated.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in (SIM_EXTRA_CFLAGS): Append @esim_cflags@
	* configure.ac: Delete --enable-sim-cflags and sim_cflags.
	Substitute esim_cflags directly.
	(SIM_AC_OPTION_ENDIAN): Change LITTLE_ENDIAN to LITTLE.
	(SIM_AC_OPTION_HOSTENDIAN): Remove.
	* sim-if.c (free_state): Restore sd->cpu from sd->orig_cpu.
	(sim_esim_cpu_relocate): Save originally allocated cpu to
	sd->orig_cpu.
	(sim_open): Mark argv const.
	(sim_create_inferior): Mark argv and envp const.
	(sim_close): Rename from ...
	(epiphany_sim_close): ... to. Don't do things generic sim_close()
	already does. Restore sd->cpu from sd->orig_cpu. Fake things for
	generic sim_close ().
	* sim-main.h (SIM_CLOSE_HOOK): Added.
	(sim_state): Add orig_cpu.

2016-10-20  Ola Jeppsson  <ola@adapteva.com>

	* cpu.c: Regenerated.
	* cpu.h: Regenerated.
	* decode.c: Regenerated.
	* decode.h: Regenerated.
	* model.c: Regenerated.
	* sem-switch.c: Regenerated.
	* sem.c: Regenerated.

2016-07-24  Ola Jeppsson  <ola@adapteva.com>

	* traps.c (sim_engine_invalid_insn): Handle remote register writes
	before halting simulation.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* esim.c (es_mem_store): Make arguments more library-like.
	(es_mem_load): Likewise.